0.9.0/_sources/generated/statsmodels.discrete.discrete_model.Logit.rst.txt
statsmodels.discrete.discrete_model.Logit
=========================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: Logit

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~Logit.cdf
    
    
      ~Logit.cov_params_func_l1
    
    
      ~Logit.fit
    
    
      ~Logit.fit_regularized
    
    
      ~Logit.from_formula
    
    
      ~Logit.hessian
    
    
      ~Logit.information
    
    
      ~Logit.initialize
    
    
      ~Logit.loglike
    
    
      ~Logit.loglikeobs
    
    
      ~Logit.pdf
    
    
      ~Logit.predict
    
    
      ~Logit.score
    
    
      ~Logit.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Logit.endog_names
      ~Logit.exog_names
   
   