v0.10.2/_sources/generated/statsmodels.discrete.discrete_model.Logit.rst.txt
statsmodels.discrete.discrete\_model.Logit
==========================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: Logit

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         Logit.cdf
         Logit.cov_params_func_l1
         Logit.fit
         Logit.fit_regularized
         Logit.from_formula
         Logit.hessian
         Logit.information
         Logit.initialize
         Logit.loglike
         Logit.loglikeobs
         Logit.pdf
         Logit.predict
         Logit.score
         Logit.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         Logit.endog_names
         Logit.exog_names

